--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,6 +1,8 @@
 name: Dependabot auto-merge
 
-on: pull_request
+on:
+  pull_request_target:
+    types: opened
 
 permissions:
   contents: write
@@ -8,7 +10,7 @@ permissions:
 
 jobs:
   dependabot:
-    runs-on: [ self-hosted ]
+    runs-on: ubuntu-latest
     if : ${{ github.actor == 'dependabot[bot]' }}
 
     steps:
@@ -18,7 +20,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
     
-      - nane: Enable auto-merge for Dependabot PRs
+      - name: Enable auto-merge for Dependabot PRs
         if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
         run: gh pr merge --auto --merge "$PR_URL"
         env:
