--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.1",
   "description": "This action creates an installer (.pkg) for macOS.",
   "main": "dist/index.js",
+  "scripts": {
+    "build": "npm install && ncc build src/main.ts -o dist --license licenses.txt",
+    "clean": "rimraf dist && rimraf node_modules && npm cache clean --force"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/akiojin/generate-mac-installer-github-action.git"
   },
   "keywords": [
     "Unity",
-    "Unity3d"
+    "Unity3d",
+    "macOS",
+    "installer"
   ],
   "author": "Akio Jinsenji <akio-jinsenji@cloud-creative-studios.com> (https://github.com/akiojin)",
   "license": "MIT",
@@ -17,16 +23,19 @@
     "url": "https://github.com/akiojin/generate-mac-installer-github-action/issues"
   },
   "homepage": "https://github.com/akiojin/generate-mac-installer-github-action#readme",
-  "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/exec": "^1.1.0",
-    "@akiojin/argument-builder": "^1.0.0"
-  },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@types/node": "^18.15.1",
+    "@actions/core": "1.10.0",
+    "@actions/exec": "1.1.1",
+    "@akiojin/argument-builder": "1.0.0",
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
+    "@types/node": "18.15.3",
     "@types/tmp": "^0.2.3",
-    "tmp": "^0.2.1"
-  }
+    "@vercel/ncc": "0.36.1",
+    "husky": "8.0.3",
+    "rimraf": "4.4.0",
+    "tmp": "^0.2.1",
+    "typescript": "5.0.2"
+  },
+  "private": true
 }
