--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "url": "https://github.com/akiojin/generate-mac-installer-github-action/issues"
   },
   "homepage": "https://github.com/akiojin/generate-mac-installer-github-action#readme",
+  "dependencies": {
+    "tmp": "0.2.1"
+  },
   "devDependencies": {
     "@actions/core": "1.10.0",
     "@actions/exec": "1.1.1",
@@ -34,7 +37,6 @@
     "@vercel/ncc": "0.36.1",
     "husky": "8.0.3",
     "rimraf": "4.4.0",
-    "tmp": "^0.2.1",
     "typescript": "5.0.2"
   },
   "private": true
