--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -19,6 +19,8 @@ jobs:
     timeout-minutes: 5
 
     steps:
+      - uses: actions/checkout@v3
+
       - uses: ./
         id: mac-installer
         with:
