--- a/action.yml
+++ b/action.yml
@@ -22,9 +22,9 @@ inputs:
   version:
     description: >
       Specifies the version of the package to be created.
-      If omitted, github.run_numer is set.
+      If omitted, github.run_number is set.
     required: true
-    default: ${{ github.run_numer }}
+    default: ${{ github.run_number }}
   install-location:
     description: >
       The directory where the package is to be installed.
