--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,11 @@ inputs:
       If omitted, '/Applications' is specified.
     required: false
     default: /Applications
+  scripts-directory:
+    description: >
+      The directory passed to --scripts, e.g. for preinstall and postinstall.
+      If omitted, --script is not passed.
+    required: false
 outputs:
   output-path:
     description: >
