--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,25 +1,20 @@
-name: Build & Test
+name: Test
 
-on: push
+on:
+  pull_request:
+    branches:
+      - main
+    types:
+      - opened
+      - synchronize
 
 jobs:
-  Build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - run: npm run build
-
   Test:
     runs-on: macos-latest
     timeout-minutes: 5
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: ./
         id: mac-installer
