--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: 🌱 Checkout to the branch
+      - name: 🔄 Checkout to the branch
         uses: actions/checkout@v4
 
       - uses: ./
